frontend/src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

/*:root {*/
/*  --background: #ffffff;*/
/*  --foreground: #171717;*/
/*}*/

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-hover-background: var(--hover-background);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

}

html {
  scrollbar-gutter: stable;
}

html.dark {
  --background: #0d1117;
  --foreground: #e6edf3;
  --hover-background: #262626;

}

html.light {
  --background: #ffffff;
  --foreground: #0a0a0a;
  --hover-background: #cbcbcb;
}

body {
  background: var(--background);
  color: var(--foreground);
  hover-background: var(--hover-background);
  font-family: Arial, Helvetica, sans-serif;
  font-size: 20px;
}

input, textarea, select {
  background: var(--background);
  color: var(--foreground);
}

